[package]
name = "rabe-console"
version = "0.2.5"
description = "ABE Schemes implemented in rust."
authors = [
    "Schanzenbach, Martin <martin.schanzenbach@aisec.fraunhofer.de>",
    "Bramm, Georg <georg.bramm@aisec.fraunhofer.de>",
    "Schuette, Julian <julian.schuette@aisec.fraunhofer.de>"
]
keywords = ["pairing","crypto","cryptography", "abe"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Fraunhofer-AISEC/rabe"
repository = "https://github.com/Fraunhofer-AISEC/rabe"
documentation = "https://docs.rs/rabe"

[[bin]]
name = "rabe"
path = "src/mod.rs"

[dependencies]
base64 = "0.10.1"
deflate = "0.9.0"
inflate = "0.4.5"
blake2-rfc = "0.2.17"
clap = "2.33.3"
rand = "0.7.3"
serde = "1.0.118"
serde_json = "1.0.60"
serde_cbor = "0.11.1"
serde_derive = "1.0.118"
pest = "2.0"
pest_derive = "2.0"
rabe = { path = "../" }